--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ six==1.16.0
 smmap==5.0.0
 streamlit==1.15.1
 streamlit-autorefresh==0.0.1
-subgrounds==1.0.0
+subgrounds
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
